# nrresqml

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/workflows/: on-push-main.yml
nrresqml/derivatives/: commonprops.py  hdf5resqmladaptor.py  ijkgridcreator.py  rqbuilder.py
nrresqml/summarization/: _utils.py  resqmldata.py  summarization.py  thumbnail.py
scripts/: import-resqml-to-rms-grid.py  make-thumbnail-image.py  summarize-resqml-model.py
