[tool.poetry]
name = "nrresqml"
version = "1.0.4"
description = "Package for converting Delft3D output to ResQml"
authors = ["Norwegian Computing Center"]
license = "GPLv3"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
h5py = "^3.11.0"
lxml = "~4.9.2"
pydap = "~3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"